deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
spec:
  selector:
    matchLabels:
      app: project
  replicas: 1
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
        - name: python-server
          image: gcr.io/peppy-aileron-292121/python-server:1.0
        - name: goolang-server
          image: gcr.io/peppy-aileron-292121/golang-server:1.0
          ports:
            - containerPort: 3001
