frontend-reactjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-reactjs
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend-reactjs
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend-reactjs
    spec:
      containers:
        - name: reactjs-server
          image: gcr.io/peppy-aileron-292121/reactjs-server:2.0
          ports:
            - containerPort: 3002
