frontend-nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodejs-service
  namespace: frontend
spec:
  selector:
    app: frontend-nodejs
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
