frontend-reactjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-reactjs-service
  namespace: frontend
spec:
  selector:
    app: frontend-reactjs
  ports:
    - port: 3002
      targetPort: 3002
  type: LoadBalancer
