gloo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-gloo-service
  namespace: project
spec:
  selector:
    app: project
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
