service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
