gloo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-gloo-ingress
  annotations:
    kubernetes.io/ingress.class: "gloo"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: project-service
              servicePort: 3001
