nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nginx.gloo.com
      http:
      paths:
        - backend:
            serviceName: project-nginx-service
            servicePort: 3000
          path: /nginx
          pathType: Prefix
